# Advanced-Computer-Architectures

./: .gitignore  LICENSE  README.md
exercises_OMP2/Fibonacci/PaxHeader/: build
exercises_OMP2/ProducerConsumer/PaxHeader/: build
exercises_OMP2/QuickSort/PaxHeader/: build
lesson_1/: README.md
lesson_1/00_HelloWorld/: compile.sh
lesson_1/02_1DStencil/: 1DStencil.cu  compile.sh
lesson_1/03_MatrixMultiplication/: MatrixMultiplication.cu  compile.sh
lesson_1/HelloWorld/: HelloWorld.cu
lesson_1/VectorAdd/: VectorAdd.cu  compile.sh  vector_add
lesson_2/: README.md
lesson_3/: README.md
lesson_3/00_VectorReduction/: CMakeLists.txt  compile.sh  compile_and_run.sh  reduce  reduce.cu  reduce_hd.cu  reduce_ld.cu  reduce_nd.cu  reduce_nd1.cu  reduce_nd2.cu
lesson_3/01_PrefixScan/: CMakeLists.txt  PrefixScan.cu
lesson_3/01_PrefixScan/include/: Timer.cuh  Timer.hpp  Timer.i.cuh  Timer.i.hpp  cuda_err.cuh  cuda_err.i.cuh
lesson_3/01_PrefixScan/src/: Timer.cpp  Timer.cu
lesson_4/: README.md
lesson_4/00_GaussianBlur/: README.md
lesson_4/00_GaussianBlur/00_GaussianBlur/: CMakeLists.txt  GaussianBlur.cu
lesson_5/: README.md
lesson_5/00_HelloWorld/: CMakeLists.txt  HelloWorld.cpp  compile.sh
lesson_5/01_MatrixMultiplication/: compile.sh  main.cpp
lesson_5/02_Factorial/: Factorial.cpp  compile.sh
lesson_5/03_Find/: Find.cpp  compile.sh
lesson_5/04_RC4/: CMakeLists.txt  RC4.cpp  compile.sh
lesson_6/: README.md
lesson_6/00_Fibonacci/: compile.sh
lesson_6/01_QuickSort/: compile.sh
utils/: benchmark.sh
(+2 files in other folders)
